# adk-cc

./: .dockerignore  .env.example  .gitignore  Dockerfile.daytona-snapshot  Dockerfile.sandbox  README.ko.md  README.md  pyproject.toml
adk_cc/: __init__.py  agent.py  logging_setup.py  prompts.py  tools.py
analysis/: apple-fm-model-plan.md  desktop-container-sandbox-plan.md  dogfooding-findings-fix-plan.md  durable-runs-design.md  env-var-refactor-plan.md  knowledge-graph-plan.md  large-tool-arg-gap.md  memory-fix-plan.md  per-user-mcp-skills-plan.md  settings-regroup-plan.md  skills-env-management-gap.md  skills-env-management-plan.md  ssh-remote-workspace-plan.md  web-registration-lifecycle-plan.md
docs/: 01-specification.ko.md  01-specification.md  02-architecture.ko.md  02-architecture.md  03-prompts.ko.md  03-prompts.md  04-deployment-sandbox.ko.md  04-deployment-sandbox.md  05-production-deployment.ko.md  05-production-deployment.md  06-confirmation-protocol.ko.md  06-confirmation-protocol.md  07-web-ui.ko.md  07-web-ui.md  08-desktop-app.ko.md  08-desktop-app.md  ARCHITECTURE.md  README.ko.md  README.md
examples/: README.md  bare_agent.py  bare_agent_with_skills.py  data_science_agent.py  data_science_agent_recovery.py  data_workflow.py
scripts/: _compaction_demo_inner.py  _project_context_demo_inner.py  _project_skills_demo_inner.py  _token_counter_demo_inner.py  build-appimage.sh  compaction_demo.py  import_desktop_sessions.py  memory_consolidator.py  probe_apple_fm.py  project_context_demo.py  project_skills_demo.py  sandbox_destroy.py  scratch_reaper.py  token_counter_demo.py  wiki_librarian.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/splash/: index.html
src-tauri/src/: main.rs
tests/: _probe_memory_canon.py  _probe_memory_resolve.py  _probe_memory_scope.py  _probe_wiki_compaction.py  acceptance_ssh_device.py  diag_streaming_timing.py  e2e_access_requests.py  e2e_access_requests_ui.py  e2e_account.py  e2e_account_lifecycle.py  e2e_account_lifecycle_ui.py  e2e_account_ui.py  e2e_admin_panel.py  e2e_ask_user_question.py  e2e_audit.py  e2e_compaction_all.py  e2e_compaction_breaker.py  e2e_compaction_seed.py  e2e_compaction_signal.py  e2e_compaction_ui.py  e2e_confirmation_flow.py  e2e_confirmation_form_ui.py  e2e_container_lifecycle.py  e2e_container_sandbox.py  e2e_container_sandbox_review.py  e2e_container_v2.py  e2e_context_gauge.py  e2e_curl_live.sh  e2e_curl_security.sh  e2e_daytona_env.py  (+174 more)
(+427 files in other folders)
